(Format: Year/Month/Day)
Changes for 0.9.2:
*03/05/04:
   * Fix warping with multiple screens (Simon)
     Window.cc
   * Set many key events/commands to act on the screen the mouse is on,
     rather than the focused window (Simon)
     fluxbox.cc
   * Fix segfault on restart with iconic windows (Simon)
     Screen.cc
*03/05/01:
   * Fix slit autohide triggering (Simon)
     Slit.cc
   * Clean ups and optimising of redraw/reconfigures
     Also fixes warping in outline focus bug (Simon)
     Window.hh/cc FbWinFrame.hh/cc
*03/04/29:
   * fix cause of (some?) excessive reconfigures (Simon)
     fluxbox.cc
   * fix fbsetbg relative path bug + simplify (Han)
     util/fbsetbg
   * Added FbDrawable.hh/cc (Henrik)
     This is a basic class for drawables such as FbWindow 
	 and FbPixmap
	 FbWindow.hh/cc, FbDrawable.hh/cc, FbPixmap.hh/cc
*03/04/28:
   * Added support for pixmap themes  (Henrik)
    (this requires libXpm is installed, but you can disabled this with --disable-xpm)
     * Texture type now has an extra option:  .pixmap
       example:
	    window.label.focus.pixmap: image.xpm
		menu.title.pixmap: image.xpm
	 * Standard buttons has one pixmap for pressed 
	   and one for normal state
	   example: 
	     window.close.pressed.pixmap: image_pressed.xpm
		 window.close.pixmap: image.xpm
		 window.stick.pixmap: image.xpm
		 window.shade.pixmap: image.xpm
		 window.maximize.pixmap: image.xpm
		 window.maximize.pressed.pixmap: image_pressed.xpm
		 window.iconify.pixmap: image.xpm
		 ...
     Screen.cc/hh, WinButton.hh/cc, Texture.hh, TextureRender.cc/hh
	 WinButtonTheme.hh/cc, configure.in
   * Update fbsetbg and fluxbox-generate_menu (Han)
   * Fix a bunch of alignment + size issues with toolbar (particularly 
      when vertical)  (Simon)
     Toolbar.cc Iconbar.cc
   * Fix remembering (and general init) of decorations (Simon)
     Window.hh/cc
   * Fix handleEvent issues, plus detachClient crash (Simon)
     Window.cc Screen.cc Remember.cc
*03/04/27: