@@ -99,20 +99,20 @@ Bugfixes/lower priority:
 Release:      0.9.2
 Approx Date:  5 May, 2003
 Major Features:
- + Integration of Remember patch        (Simon)
+ * Integration of Remember patch        (Simon)
  * Transparency                         (Henrik)
 Minor Features:
  - more keybinding actions              (Both)
  * directional focus movement           (Simon)
- - fix up focus issues                  (Simon)
+ = fix up focus issues                  (Simon)
  * snap to windows                      (Simon)
  - improved command-line help option    (Henrik)
  = pixmap buttons                       (Henrik)
  + Shaped menu/slit/toolbar             (Henrik)
 Bugfixes/lower priority:
  - Bugs from 0.9.1                      (Both)
- - stop window moving from borders      (Simon)
- - Focus acts sloppy on window close/warp (Simon)
+ * stop window moving from borders      (Simon)
+ = Focus acts sloppy on window close/warp (Simon)
 
 ----------------------------------------------------------
 Release:      0.9.3
@@ -121,6 +121,7 @@ Major Features:
  - Xinerama                             (Simon)
  - XRandr                               (Henrik)
 Minor Features:
+ - Add some sort of program launch function (Simon)
  - more powerful autogroup matching     (?)
  - nls updating (layers, toolbar)       (Both)
 Bugfixes/lower priority:
