@@ -1,6 +1,8 @@
 (Format: Year/Month/Day)
 Changes for 0.9.2:
 *03/05/04:
+   * add session.ignoreBorder - ignores window border with movement (Simon)
+     fluxbox.hh/cc Window.cc
    * Fix warping with multiple screens (Simon)
      Window.cc
    * Set many key events/commands to act on the screen the mouse is on,
